# wiki-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: deferred-engineering-items.md  llm-generalization-plan.md  next-stage-plan.md  phase-1-plan.md  trustworthy-wiki-journey-plan.md
src/llm_wiki/: batch.py  claims.py  cli.py  config.py  diffing.py  filesystem.py  ingest.py  lint.py  maintenance.py  markdown.py  models.py  planning.py  query.py  retrieval.py  review.py  reviews.py  schema.py  source_loader.py  templates.py  viewer.py  wiki.py
src/llm_wiki/commands/: ingest.py  ingest_dir.py  init.py  lint.py  query.py  rebuild_index.py  refresh_source.py  review.py  view.py
src/llm_wiki/llm/: __init__.py  base.py  config.py  prompts.py  retry.py  schemas.py
src/llm_wiki/llm/providers/: gemini.py
tests/: test_claims.py  test_gemini_provider.py  test_ingest_command.py  test_init_command.py  test_lint_command.py  test_lint_fix_proposals.py  test_llm_config.py  test_llm_integration.py  test_maintenance_commands.py  test_query_command.py  test_retrieval.py  test_review_command.py  test_schema.py  test_viewer.py
tests/fixtures/queries/: retrieval_cases.json
vault/schema/: config.yaml
vault/schema/prompts/: common.md  ingest.md  lint.md  query.md
vault/schema/templates/: analysis.md  concept.md  entity.md  source.md
vault/wiki/: index.md  log.md
