[project]
name = "llm-wiki"
version = "0.1.0"
description = "A local CLI for building persistent LLM-maintained wikis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.70.0",
    "markdown>=3.10.2",
    "pydantic>=2.12.5",
    "pymupdf4llm>=1.27.2.2",
    "python-fasthtml>=0.13.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "trafilatura>=2.0.0",
    "typer>=0.24.1",
]

[project.scripts]
llm-wiki = "llm_wiki:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
